--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Flutter Backend",
     "main": "app.js",
     "scripts": {
-        "start": "node -r esm app.js -p 8080",
+        "start": "node dist/index.js",
         "dev": "nodemon -r esm app.js -p 8080"
     },
     "dependencies": {
